Changed the site's title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Character Creator</title>
+  <title>Persona 3 Reload Dialogue Generator</title>
   <style>
     @font-face {
       font-family: 'Skip Std B';
