--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="shortcut icon" type="image/x-icon" href="./assets/favicon.ico">
   <title>Persona 3 Reload Dialogue Generator</title>
   <style>
     @font-face {
